Fixes and changes to diagnostic output (#51)
* Services; RandomGenerator fallback; cleanup

* Entity effect tlc

* Organize diagnostic output

* More diagnostic output cleanup

* Add entity view to debug display

* Cleanup renderings

* Fixup instance caching for diagnostic overlay

* Split clock and compass overlay; reposition clock text in GUI

* Minor cleanups

* Redo config framework

* Include to make CI happy

* Some comments and minor refactor

* Wrap tooltip for ClothConfig; separate model from config instance

* Tighten up error checking around script engine

* Change how clock info is rendered

* Optimize color gradient processing

* Add forge tagging and support for BoP

* Fixup some data tags

* Bump

---------

Co-authored-by: OreCruncher <orecruncher@gmail.com>